--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
         <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. 
         O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-<h2>Benefícios</h2>
+
+<div class="benefícios"></div>
+        <h2>Benefícios</h2>
 <ul>
 <li class="itens">Atenimento ao Clientes</li>
 <li class="itens">Espaço Diferenciado</li>
