--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
 <li class="itens">Localização</li>
 <li class="itens">Profissionais Qualificados</li>
 </ul>
+<img srcset="benefícios.jpg">
     </body>
 </html>
