--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
 <li class="itens">Localização</li>
 <li class="itens">Profissionais Qualificados</li>
 </ul>
-<img src="benefícios.jpg">
+<img id="benefícios.img" src="benefícios.jpg">
     </body>
 </html>
