--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
 
 <div class="benefícios">
         <h2>Benefícios</h2>
+
 <ul>
 <li class="itens">Atenimento ao Clientes</li>
 <li class="itens">Espaço Diferenciado</li>
 <li class="itens">Localização</li>
 <li class="itens">Profissionais Qualificados</li>
 </ul>
+
 <img id="benefícios.img" src="beneficios.jpg">
+</div>
     </body>
 </html>
